# purpledrop-stm32

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  ChangeLog.md  Makefile  README.md  c_cpp_properties.json  memory.ld  openocd.cfg  openocd.gdb  project.xml  purpledrop-v0.3.0.dfu  version.cmake
.cargo/: config
STM32_USB_OTG_Driver/inc/: usb_regs.h
dfu-sam/: main.cpp  openocd.gdb  project.xml  tusb_config_local.h  tusb_descriptors.cpp
lib/: CMakeLists.txt  version.cmake
lib/STM32_USB_Device_Library/Class/cdc/inc/: usbd_cdc_core.h
lib/STM32_USB_Device_Library/Class/cdc/src/: usbd_cdc_core.c  usbd_cdc_core_loopback.c
lib/STM32_USB_Device_Library/Core/src/: usbd_core.c  usbd_req.c
lib/STM32_USB_OTG_Driver/inc/: usb_bsp.h  usb_core.h
lib/STM32_USB_OTG_Driver/src/: usb_bsp_template.c  usb_core.c
lib/src/: Analog.hpp  AppConfig.cpp  AppConfig.hpp  AppConfigController.hpp  AuxGpios.hpp  CircularBuffer.hpp  Comms.cpp  Comms.hpp  Electrodes.hpp  EventEx.hpp  FeedbackControl.cpp  FeedbackControl.hpp  HV507.hpp  HvRegulator.hpp  InvertableGpio.hpp  MessageFramer.hpp  Messages.hpp  PwmOutput.hpp  SafeFlashPersist.hpp  ScanGroups.hpp  TempSensors.hpp  version.hpp
sam/: CMakeLists.txt  memory.ld  openocd.gdb  program_fuses.py  project.xml
sam/src/: PwmDac.hpp  SamCallbackTimer.hpp  SamFlash.hpp  SystemClock.hpp  main.cpp  tusb_config_local.h  tusb_descriptors.c
sam/svd/: ATSAMG55J19.svd
src/: main.cpp  main.rs  startup_stm32f413_423xx.s  stm32f4xx.h  stm32f4xx_conf.h  stm32f4xx_ip_dbg.c  stm32f4xx_it.c  system_stm32f4xx.c  version.cpp.in
src/app/: Analog.cpp  Analog.hpp  AppConfig.cpp  AppConfig.hpp  AppConfigController.cpp  AppConfigController.hpp  CallbackTimer.hpp  CircularBuffer.hpp  Comms.cpp  Comms.hpp  EventEx.hpp  Events.hpp  FeedbackControl.cpp  FeedbackControl.hpp  HV507.cpp  HV507.hpp  HvRegulator.hpp  InvertableGpio.hpp  MessageFramer.hpp  Messages.hpp  PeriodicPollingTimer.hpp  PwmOutput.cpp  PwmOutput.hpp  ScanGroups.hpp  SystemClock.hpp  TempSensors.cpp  TempSensors.hpp
src/driver/: Analog.cpp  Gpio.hpp  HV507.hpp  Max31865.hpp  PwmOutput.cpp  SafeFlashPersist.hpp  SpiBus.hpp  SpiDevice.hpp  SystemClock.hpp  flash.hpp  rcc.c  rcc.h
src/usb/: usb_bsp.c  usb_bsp.cpp  usb_conf.h  usb_vcp.cpp  usb_vcp.hpp  usbd_conf.h  usbd_desc.c  usbd_desc.h  usbd_usr.h
stm32/: CMakeLists.txt  Makefile  SConstruct  memory.ld  monitor_init.gdb  openocd.gdb  project.xml
stm32/src/: Stm32Flash.hpp  StmCallbackTimer.hpp  SystemClock.hpp  main.cpp  syscalls.c  tusb_config_local.h  tusb_descriptors.c
templated/: repo.lb
templated/i2c-sam/: i2c_master.cpp.in  i2c_master.hpp.in  module.lb
test/: CMakeLists.txt  EventBroker-test.cpp  MessageFramer-test.cpp  Messages-test.cpp
tools/: dfu_build.py  make_dfu.py
